# CameraPixTest

./: Cargo.toml  db.sql  main.py
src/: main.rs  utils.rs
