[package]
name = "CameraPixTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nokhwa = { features = [
    "input-native",
], git = "https://github.com/l1npengtul/nokhwa.git", rev = "58454663" }
image = "0.24.8"
log = "0.4.20"
serialport = "*"
mavlink = { version = "*", default-features = false, features = [
    "direct-serial",
    "emit-extensions",
    "serial",
    "standard",
    "std",
] }
#sqlite = "0.33.0"
rusqlite = "0.30.0"
nix = "0.26.4"